# utf8-console

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  msrv.yml  rustfmt.yml  unit-tests.yml
utf8-console/: Cargo.toml
utf8-console/src/: lib.rs  tests.rs  unix.rs  windows.rs
